28 April 2010: Wouter
	- ldns tarball updated and GOST support is detected and then enabled. 
	- iana portlist updated.
	- Fix detection of gost support in ldns (reported by Chris Smith).

27 April 2010: Wouter
	- unbound-control get_option domain-insecure shows config file items.
	- fix retry sequence if prime hints are recursion-lame.
	- autotrust anchor file can be initialized with a ZSK key as well.
	- harden-referral-path does not result in failures due to max-depth.
	  You can increase the max-depth by adding numbers (' 0') after the
	  target-fetch-policy, this increases the depth to which is checked.

26 April 2010: Wouter
	- Compile fix using Sun Studio 12 compiler on Solaris 5.9, use
	  CPPFLAGS during configure process.
	- if libev is installed on the base system (not libevent), detect
	  it from the event.h header file and link with -lev.
	- configlexer.lex gets config.h, and configyyrename.h added by make,
	  no more double include.
	- More strict scrubber (Thanks to George Barwood for the idea):
	  NS set must be pertinent to the query (qname subdomain nsname).
	- Fix bug#307: In 0x20 backoff fix fallback so the number of 
	  outstanding queries does not become -1 and block the request.
	  Fixed handling of recursion-lame in combination with 0x20 fallback.
	  Fix so RRsets are compared canonicalized and sorted if the immediate
	  comparison fails, this makes it work around round-robin sites.

23 April 2010: Wouter
	- Squelch log message: sendto failed permission denied for
	  255.255.255.255, it is visible in VERB_DETAIL (verbosity 2).
	- Fix to fetch data as last resort more tenaciously.  When cycle
	  targets cause the server selection to believe there are more options
	  when they really are not there, the server selection is reinitiated.
	- Fix fetch from blacklisted dnssec lame servers as last resort.  The
	  server's IP address is then given in validator errors as well.
	- Fix local-zone type redirect that did not use the query name for